Add all planned services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,42 @@
                     <span *ngSwitchDefault class="unknown">Unknown</span>
                 </td>
             </tr>
+            <tr>
+                <td><i class="fa fa-twitter"></i> <b>Twitter</b></td>
+                <td class="result">
+                    <span class="unknown">Work in progress</span>
+                </td>
+            </tr>
+            <tr>
+                <td><i class="fa fa-docker"></i> <b>Docker</b></td>
+                <td class="result">
+                    <span class="unknown">Work in progress</span>
+                </td>
+            </tr>
+            <tr>
+                <td><b>.com domain</b></td>
+                <td class="result">
+                    <span class="unknown">Work in progress</span>
+                </td>
+            </tr>
+            <tr>
+                <td><b>.io domain</b></td>
+                <td class="result">
+                    <span class="unknown">Work in progress</span>
+                </td>
+            </tr>
+            <tr>
+                <td><b>.org domain</b></td>
+                <td class="result">
+                    <span class="unknown">Work in progress</span>
+                </td>
+            </tr>
+            <tr>
+                <td><b>.org domain</b></td>
+                <td class="result">
+                    <span class="unknown">Work in progress</span>
+                </td>
+            </tr>
         </tbody>
     </table>
 </main>
