--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
                 </td>
             </tr>
             <tr>
-                <td><b>.org domain</b></td>
+                <td><b>.net domain</b></td>
                 <td class="result">
                     <span class="unknown">Work in progress</span>
                 </td>
